# PosteriorSampler

./: README.md
telescoping_posterior_sampler/: Installation Overview.md  Installation and Overview.md  README.md  pyproject.toml  requirements.txt
telescoping_posterior_sampler/examples/: gmm_demo.py  swiss_roll_demo.py
telescoping_posterior_sampler/src/telescoping_posterior/: __init__.py  diffusion.py  likelihood.py  noise_basis.py  plotting.py  priors.py  sampler.py  score_model.py  training.py
